--- a/index.html
+++ b/index.html
@@ -144,34 +144,101 @@
     <!--Ghibli Animation-->
     <section id="ghibli_animation">
         <div class="inner">
+
             <h3 class="article_category">지브리 대표작품</h3>
             <svg class="arrow_down article_down" width="26" height="77" viewBox="0 0 26 77" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M13 74L13 0" stroke="#00B6FF" stroke-width="3" />
                 <path d="M24 63L13 74L2 63" stroke="#00B6FF" stroke-width="3" />
             </svg>
-            <article id="ghibli_animation_article1">
-                <h3 class="article_title">아카데미 장편 애니메이션을 수상한 걸작</h3>
-                <h1 class="article_title_big">센과 치히로의 행방불명</h1>
-                <p class="article_content">
-                    부모님과 이사를 가던 치히로는 가족들과 우연히 수상한 터널을 지나<br>
-                    신들이 사는 세계에 발을 내딛게 된다. 허락없이 그 곳의 음식을 먹은 치히로의<br>
-                    부모님은 돼지가 되어버리고, 사라질 위기에 처한 치히로. 이 때 신비한 소년<br>
-                    하쿠를 만나 신들의 목욕탕에서 일하며 ‘센’이라는 새로운 이름을 얻게되는데...</p>
-                <button class="button_big">자세히 알아보기</button>
-                <div id="ghibli_animation_article1_img">
-                    <div id="ghibli_animation_article1_all">
-                        <img src="./img/main/aniamtion_SpiritedAway1.png" alt="SpiritedAway">
-                    </div>
-                    <div id="ghibli_animation_article1_haku">
-                        <img src="./img/main/aniamtion_SpiritedAway2-1.png" alt="SpiritedAway">
-                        <img src="./img/main/aniamtion_SpiritedAway2-2.png" alt="SpiritedAway">
-                    </div>
+
+            <div id="pagination_area">
+                <div id="pagination">
+                    <a href="#ghibli_animation_article1"></a>
+                    <a href="#ghibli_animation_article2"></a>
+                    <a href="#ghibli_animation_article3"></a>
+                    <a href="#ghibli_animation_article4"></a>
                 </div>
-                <div id="ghibli_animation_article1_img_background">
-                    <img id="ghibli_animation_article1_img_background_first" src="./img/main/aniamtion_SpiritedAway_Background1.png" alt="SpiritedAway">
-                </div>
-            </article>
+            </div>
+
+            <div id="article_area">
+                <article id="ghibli_animation_article1">
+                    <h3 class="article_title">아카데미 장편 애니메이션을 수상한 걸작</h3>
+                    <h1 class="article_title_big">센과 치히로의 행방불명</h1>
+                    <p class="article_content">
+                        부모님과 이사를 가던 치히로는 가족들과 우연히 수상한 터널을 지나<br>
+                        신들이 사는 세계에 발을 내딛게 된다. 허락없이 그 곳의 음식을 먹은 치히로의<br>
+                        부모님은 돼지가 되어버리고, 사라질 위기에 처한 치히로. 이 때 신비한 소년<br>
+                        하쿠를 만나 신들의 목욕탕에서 일하며 ‘센’이라는 새로운 이름을 얻게되는데...</p>
+                    <button class="button_big">자세히 알아보기</button>
+                    <div id="ghibli_animation_article1_img">
+                        <div id="ghibli_animation_article1_all">
+                            <img src="./img/main/aniamtion_SpiritedAway1.png" alt="SpiritedAway">
+                        </div>
+                        <div id="ghibli_animation_article1_haku">
+                            <img src="./img/main/aniamtion_SpiritedAway2-1.png" alt="SpiritedAway">
+                            <img src="./img/main/aniamtion_SpiritedAway2-2.png" alt="SpiritedAway">
+                        </div>
+                    </div>
+                    <div id="ghibli_animation_article1_img_background">
+                        <img id="ghibli_animation_article1_img_background_first"
+                            src="./img/main/aniamtion_SpiritedAway_Background1.png" alt="SpiritedAway">
+                    </div>
+                </article>
+                <article id="ghibli_animation_article2" class="article_row">
+                    <div class="article_align">
+                        <div class="article_left">
+                            <h3 class="article_title">지브리표 성장 로맨스!</h3>
+                            <h1 class="article_title_big">하울의<br>움직이는 성</h1>
+                            <p class="article_content">
+                                19세기 말. 모자 공방 주인의 딸 소피는, 황야의 마녀라<br>
+                                불리는 의문의 여성에게 노파가 되는 저주를 받고 황야로<br>
+                                여행을 떠난다. 그리고 지난 번, 우연히 만났던 하울의 성에<br>
+                                도착해 그 곳에서 여러 일을 도우며 지내게 되는데...</p>
+                            <button class="button_big">자세히 알아보기</button>
+                        </div>
+                        <div class="article_right article_background">
+                            <img class="article_element" src="./img/main/animation_howl.png" alt="howl">
+                        </div>
+                    </div>
+                </article>
+                <article id="ghibli_animation_article3" class="article_row">
+                    <div class="article_align">
+                        <div class="article_left">
+                            <h3 class="article_title">따뜻한 판타지 드라마</h3>
+                            <h1 class="article_title_big">이웃집<br>토토로</h1>
+                            <p class="article_content">
+                                어머니의 병을 치료하기 위해 시골마을로 이사온 사츠키와<br>
+                                메이는 신비한 생명체 토토로를 만난다. 어느날,<br>
+                                어머니가 위태롭다는 소식이 전해지고 메이가 행방불명이 <br>
+                                되자 사츠키는 토토로에게 도움을 요청하는데...</p>
+                            <button class="button_big">자세히 알아보기</button>
+                        </div>
+                        <div class="article_right article_background">
+                            <img class="article_element" src="./img/main/aniamtion_totoro1-1.png" alt="totoro">
+                            <img class="article_element" src="./img/main/aniamtion_totoro1.png" alt="totoro">
+                        </div>
+                    </div>
+                </article>
+                <article id="ghibli_animation_article4" class="article_row">
+                    <div class="article_align">
+                        <div class="article_left">
+                            <h3 class="article_title">자연과 인간을 탐구한 대작</h3>
+                            <h1 class="article_title_big">모노노케 히메<br>(원령공주)</h1>
+                            <p class="article_content">
+                                무로마치 시대의 일본. 주인공 아시타카는 에미시 일족의<br>
+                                마을을 습격한 재앙신을 사살하고 저주에 걸리게 된다.<br>
+                                아시타카는 저주를 막기 위해 여행을 떠나고, 인간과<br>
+                                신들의 전쟁 속에서 한 소녀를 만나게 되는데...</p>
+                            <button class="button_big">자세히 알아보기</button>
+                        </div>
+                        <div class="article_right article_background">
+                            <img class="article_element" src="./img/main/aniamtion_mononoke.png" alt="mononoke">
+                        </div>
+                    </div>
+                </article>
+            </div>
+
         </div>
     </section>
 
