--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <div id="pagination_area">
                 <div id="pagination">
-                    <a href="#ghibli_animation_article1"></a>
+                    <a href="#ghibli_animation_article1" class="BlueToggle"></a>
                     <a href="#ghibli_animation_article2"></a>
                     <a href="#ghibli_animation_article3"></a>
                     <a href="#ghibli_animation_article4"></a>
@@ -241,7 +241,91 @@
 
         </div>
     </section>
+    <!--     
+    <section id="ghibli_others">
+        <div class="inner">
+            <h3 class="article_category">애니메이션 그 밖에</h3>
+            <svg class="arrow_down article_down" width="26" height="77" viewBox="0 0 26 77" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M13 74L13 0" stroke="#00B6FF" stroke-width="3" />
+                <path d="M24 63L13 74L2 63" stroke="#00B6FF" stroke-width="3" />
+            </svg>
+            <div id="ghibli_other_align">
+                <article class="ghibli_other_article" id="ghibli_musical" >
+                    <div class="ghibli_other_img">
 
+                        <div class="img_front">
+                            <img src="img/main/ghibli_musical_1.jpg" alt="ghibli_musical">
+                        </div>
+                        <div class="img_back" >
+                            <img src="img/main/ghibli_musical_1-1.jpg" alt="ghibli_musical">
+                        </div>
+
+                    </div>
+
+                    <div class="ghibli_other_img">
+                        <img class="img_front" src="img/main/ghibli_musical_2.jpg" alt="ghibli_musical">
+                    </div>
+                    <div class="ghibli_other_content">
+                        <h3 class="article_title">무대</h3>
+                        <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
+                        <p class="article_content">
+                            아카데미 상을 수상한 센과 치히로의 행방불명을<br>
+                            무대로 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
+                            매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
+                            칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
+                        <button class="button_big">자세히 알아보기</button>
+                    </div>
+                
+                </article> -->
+    <!-- <article class="ghibli_other_article" id="ghibli_movie" >
+                    <div class="ghibli_other_img">
+                        <img class="img_front" src="img/main/ghibli_movie_1.jpg" alt="">
+                    </div>
+                    <div class="ghibli_other_img">
+                        <img class="img_front" src="img/main/ghibli_movie_2.jpg" alt="">
+                    </div>
+                    <div class="ghibli_other_content">
+                        <h3 class="article_title">영화</h3>
+                        <h1 class="article_title_big">귀를<br>기울이면</h1>
+                        <p class="article_content">
+                            만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
+                            기울이면' 과는 같은 원작의 별개의 작품이지만 여자주인공<br>
+                            시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
+                            싱크로율을 보이는 등 지브리의 팬도 충분히 즐길 수 있다.</p>
+                        <button class="button_big">자세히 알아보기</button>
+                    </div>
+                </article> -->
+    <article id="ghibli_world">
+        <div class="full_inner" id="ghibli_world_background">
+            <div class="inner">
+                <h3 class="article_category">지브리 세계속으로</h3>
+                <svg class="arrow_down article_down" width="26" height="77" viewBox="0 0 26 77" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 74L13 0" stroke="#FFFFFF" stroke-width="3" />
+                    <path d="M24 63L13 74L2 63" stroke="#FFFFFF" stroke-width="3" />
+                </svg>
+            </div>
+        </div>
+        <div class="inner">
+            <div class="ghibli_world_tour">
+                <h3 class="article_title">
+                    <span class="material-icons">location_on</span>
+                    일본, 아이치현
+                </h3>
+                <h1 class="article_title_big">지브리 파크</h1>
+                <p class="article_content">
+                    지브리 애니메이션속에 등장하는 건축물들이 재현된<br>
+                    스튜디오 지브리의 세계를 대표하는 공원이다.</p>
+                <button class="button_big">입장권 예매하기</button>
+                <div class="ghibli_world_tour_img"></div>
+            </div>
+        </div>
+    </article>
+    </div>
+    </div>
+
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
