--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             </div>
             <img id="studioGhibli_write" src="img/main/studioGhibli_write.png" alt="studioGhibli_write">
             <div id="change_img_box"></div>
-            <p id="change_img_text">우리가 사랑하는 지브리의 모든 것</p>
+            <div class="inner">
+                <p id="change_img_text">우리가 사랑하는 지브리의 모든 것</p>
+            </div>
         </div>
     </section>
 
@@ -154,7 +156,7 @@
 
             <div id="pagination_area">
                 <div id="pagination">
-                    <a href="#ghibli_animation_article1" class="BlueToggle"></a>
+                    <a href="#ghibli_animation_article1"></a>
                     <a href="#ghibli_animation_article2"></a>
                     <a href="#ghibli_animation_article3"></a>
                     <a href="#ghibli_animation_article4"></a>
@@ -241,7 +243,7 @@
 
         </div>
     </section>
-    <!--     
+
     <section id="ghibli_others">
         <div class="inner">
             <h3 class="article_category">애니메이션 그 밖에</h3>
@@ -250,54 +252,80 @@
                 <path d="M13 74L13 0" stroke="#00B6FF" stroke-width="3" />
                 <path d="M24 63L13 74L2 63" stroke="#00B6FF" stroke-width="3" />
             </svg>
-            <div id="ghibli_other_align">
-                <article class="ghibli_other_article" id="ghibli_musical" >
-                    <div class="ghibli_other_img">
 
-                        <div class="img_front">
-                            <img src="img/main/ghibli_musical_1.jpg" alt="ghibli_musical">
+                <article class="others-flip-all" >
+                        <div class="others-flip-align" id="others-flip-1">
+                            <div class="others-flip">
+                                <div class="flip-inner">
+                                    <div class="flip-front">
+                                        <img src="img/main/ghibli_musical_1.jpg" alt="센과치히로의 행방불명_앞면">
+                                    </div>
+                                    <div class="flip-back">
+                                        <img src="img/main/ghibli_musical_1-1.jpg" alt="센과치히로의 행방불명_뒷면">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="others-flip">
+                                <div class="flip-inner">
+                                    <div class="flip-front">
+                                        <img src="img/main/ghibli_musical_2.jpg" alt="센과치히로의 행방불명_앞면">
+                                    </div>
+                                    <div class="flip-back">
+                                        <img src="img/main/ghibli_musical_2-1.jpg" alt="센과치히로의 행방불명_뒷면">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-content">
+                                <h3 class="article_title">연극</h3>
+                                <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
+                                <p class="article_content">
+                                    아카데미 상을 수상한 센과 치히로의 행방불명을 최초<br>
+                                    무대 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
+                                    매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
+                                    칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
+                                <button class="button_big">자세히 알아보기</button>
+                            </div>
                         </div>
-                        <div class="img_back" >
-                            <img src="img/main/ghibli_musical_1-1.jpg" alt="ghibli_musical">
+                        <div class="others-flip-align" id="others-flip-2">
+                            <div class="others-flip">
+                                <div class="flip-inner">
+                                    <div class="flip-front">
+                                        <img src="img/main/ghibli_movie_1.jpg" alt="귀를기울이면_앞면">
+                                    </div>
+                                    <div class="flip-back">
+                                        <img src="img/main/ghibli_movie_1-1.jpg" alt="귀를기울이면_뒷면">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="others-flip">
+                                <div class="flip-inner">
+                                    <div class="flip-front">
+                                        <img src="img/main/ghibli_movie_2.jpg" alt="귀를기울이면_앞면">
+                                    </div>
+                                    <div class="flip-back">
+                                        <img src="img/main/ghibli_movie_2-1.jpg" alt="귀를기울이면_뒷면">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-content">
+                                <h3 class="article_title">실사 영화</h3>
+                                <h1 class="article_title_big">귀를<br>기울이면</h1>
+                                <p class="article_content">
+                                    만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
+                                    기울이면' 과는 같은 원작의 별개의 작품이지만 주인공<br>
+                                    시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
+                                    싱크로율을 보이며 지브리의 팬도 충분히 즐길 수 있다.</p>
+                                <button class="button_big">자세히 알아보기</button>
+                            </div>
                         </div>
+                </article>
 
-                    </div>
+        </div>
+    </section>
 
-                    <div class="ghibli_other_img">
-                        <img class="img_front" src="img/main/ghibli_musical_2.jpg" alt="ghibli_musical">
-                    </div>
-                    <div class="ghibli_other_content">
-                        <h3 class="article_title">무대</h3>
-                        <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
-                        <p class="article_content">
-                            아카데미 상을 수상한 센과 치히로의 행방불명을<br>
-                            무대로 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
-                            매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
-                            칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
-                        <button class="button_big">자세히 알아보기</button>
-                    </div>
-                
-                </article> -->
-    <!-- <article class="ghibli_other_article" id="ghibli_movie" >
-                    <div class="ghibli_other_img">
-                        <img class="img_front" src="img/main/ghibli_movie_1.jpg" alt="">
-                    </div>
-                    <div class="ghibli_other_img">
-                        <img class="img_front" src="img/main/ghibli_movie_2.jpg" alt="">
-                    </div>
-                    <div class="ghibli_other_content">
-                        <h3 class="article_title">영화</h3>
-                        <h1 class="article_title_big">귀를<br>기울이면</h1>
-                        <p class="article_content">
-                            만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
-                            기울이면' 과는 같은 원작의 별개의 작품이지만 여자주인공<br>
-                            시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
-                            싱크로율을 보이는 등 지브리의 팬도 충분히 즐길 수 있다.</p>
-                        <button class="button_big">자세히 알아보기</button>
-                    </div>
-                </article> -->
-    <article id="ghibli_world">
-        <div class="full_inner" id="ghibli_world_background">
+
+    <section id="ghibli_world">
+        <article class="full_inner" id="ghibli_world_background">
             <div class="inner">
                 <h3 class="article_category">지브리 세계속으로</h3>
                 <svg class="arrow_down article_down" width="26" height="77" viewBox="0 0 26 77" fill="none"
@@ -306,9 +334,9 @@
                     <path d="M24 63L13 74L2 63" stroke="#FFFFFF" stroke-width="3" />
                 </svg>
             </div>
-        </div>
-        <div class="inner">
-            <div class="ghibli_world_tour">
+        </article>
+        <div class="inner inner_article">
+            <article class="ghibli_world_tour">
                 <h3 class="article_title">
                     <span class="material-icons">location_on</span>
                     일본, 아이치현
@@ -318,14 +346,116 @@
                     지브리 애니메이션속에 등장하는 건축물들이 재현된<br>
                     스튜디오 지브리의 세계를 대표하는 공원이다.</p>
                 <button class="button_big">입장권 예매하기</button>
-                <div class="ghibli_world_tour_img"></div>
+                <div class="ghibli_world_tour_img_1"></div>
+            </article>
+
+            <article class="ghibli_world_tour">
+                <h3 class="article_title">
+                    <span class="material-icons">location_on</span>
+                    일본, 도쿄
+                </h3>
+                <h1 class="article_title_big">지브리 미술관</h1>
+                <p class="article_content">
+                    미야자키 하야오 감독이 직접 디자인한 공간으로,<br>
+                    상설전시와 특별전시가 진행된다.</p>
+                <button class="button_big">입장권 예매하기</button>
+                <div class="ghibli_world_tour_img_2"></div>
+            </article>
+        </div>
+        </div>
+    </section>
+
+    <section id="ghibli_notice">
+        <div class="inner">
+            <h3 class="article_category">지브리 소식</h3>
+            <svg class="arrow_down article_down" width="26" height="77" viewBox="0 0 26 77" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M13 74L13 0" stroke="#00B6FF" stroke-width="3" />
+                <path d="M24 63L13 74L2 63" stroke="#00B6FF" stroke-width="3" />
+            </svg>
+
+
+
+            <div id="notice_article">
+                <article class="notice" id="notice_1">
+                    <div class="notice_left">
+                        <div class="notice_poster">
+                            <img src="img/main/notice_article_1.jpg" alt="그대들, 어떻게 살 것인가">
+                        </div>
+                    </div>
+                    <div class="notice_right">
+                        <h3 class="article_title">영화</h3>
+                        <h1 class="article_title_big">그대들,<br>어떻게 살 것인가</h1>
+                        <p class="article_content">
+                            미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고<br>
+                            10년만에 발표한 작품으로, 미야자키 하야오 감독 연출의<br>
+                            애니메이션 중 최고의 작화라고 평가받고있습니다.</p>
+                        <button class="button_big">자세히 알아보기</button>
+                    </div>
+                </article>
+                <article class="notice" id="notice_2">
+                    <div class="notice_left">
+                        <div class="notice_poster">
+                            <img src="img/main/notice_article_2.jpg" alt="그대들, 어떻게 살 것인가">
+                        </div>
+                    </div>
+                    <div class="notice_right">
+                        <h3 class="article_title">전시회</h3>
+                        <h1 class="article_title_big">지브리 파크와<br>지브리 전시회</h1>
+                        <p class="article_content">
+                            2022년 11월 개원한 지브리 파크의 제작 현장의<br>
+                            지휘자이자 애니메이션 감독인 미야자키 고로 감독의<br>
+                            일화와 지브리 파크 제작 자료를 소개합니다.</p>
+                        <button class="button_big">자세히 알아보기</button>
+                    </div>
+                </article>
+                <article class="notice" id="notice_3">
+                    <div class="notice_left">
+                        <div class="notice_poster">
+                            <img src="img/main/notice_article_3.jpg" alt="그대들, 어떻게 살 것인가">
+                        </div>
+                    </div>
+                    <div class="notice_right">
+                        <h3 class="article_title">콘서트</h3>
+                        <h1 class="article_title_big">히사이시 조<br>영화음악 콘서트</h1>
+                        <p class="article_content">
+                            미야자키 하야오 감독의 모든 애니메이션 음악을 담당하며<br>
+                            지브리 애니메이션을 더욱 풍성하게 만들었던<br>
+                            히사이시 조의 음악을 필하모닉 오케스트라와 함께하세요.</p>
+                        <button class="button_big">자세히 알아보기</button>
+                    </div>
+                </article>
+            </div>
+
+
+
+            <div class="slide_button">
+                <button id="prev"><span class="material-icons">arrow_back_ios</span></button>
+                <button id="next"><span class="material-icons">arrow_forward_ios</span></button>
             </div>
         </div>
-    </article>
-    </div>
-    </div>
-
+        <div class="ghibli_notice_background"></div>
     </section>
+
+    <footer>
+        <div class="inner">
+            <a href="#"><img src="img/main/ghibli_logo_blue.png" alt="logo"></a>
+            <p id="description">본 사이트는 지브리를 좋아하는 마음을 담아 만든<br>
+                개인 포트폴리오로 상업용 사이트가 아닙니다.</p>
+            <p id="ghibli_site">지브리 공식 사이트 바로가기</p>
+            <div id="line">
+                <a href="https://line.me/R/ti/p/@studioghibli?from=page&openQrModal=true&searchId=studioghibli"
+                    target="_blank">
+                    <img src="img/main/footer_line.jpeg" alt="logo">
+                </a>
+            </div>
+            <div id="twitter">
+                <a href="https://twitter.com/i/flow/login?redirect_after_login=%2FJP_GHIBLI">
+                    <img src="img/main/footer_twitter.jpg" alt="logo">
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
